welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:2: error: not found: value x
  x=nums(0)
  ^indexOfMaxValue:3: error: not found: value indice
	indice=0
        ^indexOfMaxValue:5: error: not found: value x
    if (nums(i)>x){
                ^indexOfMaxValue:6: error: not found: value x
      x=nums(i)
      ^indexOfMaxValue:7: error: not found: value indice
      indice = i
      ^indexOfMaxValue:10: error: not found: value i
  return i
         ^